# SavvyThreads

./: .gitignore  README.md  project_structure.txt
backend/: pyproject.toml
backend/api/: main.py  models.py
backend/api/routes/: analytics.py  chat.py  health.py  ingest.py
backend/core/agents/: .gitkeep
backend/tools/: ingest_tool.py
frontend/: .gitkeep
graphdb/: .gitkeep
notebooks/: .gitkeep
prompt_engineering/: .gitkeep
scripts/: log_config.py
