[project]
name = "SavvyThreads-backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph orchestration, Neo4j vector DB, and agentic tools"
authors = [{ name = "Vasu Katravath", email = "katravathvasu000@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "langchain>=0.1.14",
    "langgraph>=0.0.39",
    "openai>=1.12.0",
    "neo4j>=5.13.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0,<3.0",
    "tenacity>=8.2.3",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "h11>=0.14.0",
    "starlette>=0.37.0",
    "typing-extensions>=4.0.0",
    "typing-inspection>=0.4.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"
